--- a/src/server/LeafLogParser/LeafLogParser.csproj
+++ b/src/server/LeafLogParser/LeafLogParser.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Authors>Nic Dobbins</Authors>
+    <Company>UW Medicine Research IT</Company>
+    <Copyright>2019 UW Medicine Research IT</Copyright>
+    <PackageProjectUrl>https://github.com/uwrit/leaf-log-parser</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
